--- a/nornir-image/app/inventory/hosts.yaml
+++ b/nornir-image/app/inventory/hosts.yaml
@@ -2,19 +2,19 @@ ios-xe-router-2:
   hostname: 10.0.0.111
   groups:
     - ios
-    - dev
+    - prod
 ios-xe-router-1:
   hostname: 10.0.0.110
   groups:
     - ios
-    - dev
-prod-ios-xe-2:
+    - prod
+dev-ios-xe-router-2:
   hostname: 10.0.0.211
   groups:
     - ios
     - dev
 
-prod-ios-xe-1:
+dev-ios-xe-router-1:
   hostname: 10.0.0.210
   groups:
     - ios
