--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-requests==2.26.0
-nornir==3.1.0
-nornir-utils==0.1.2
-nornir-jinja2==0.1.2
-nornir-napalm==0.2.0
-nornir-salt==0.16.1
-ttp==0.9.0
-genie==22.10
-pyats==22.10
+requests==2.28.1
+ansible==6.6.0
